--- a/recipes/latkes.html
+++ b/recipes/latkes.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>theodinproject</title>
+    <title>Latkes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-
-    <a href="recipes/latkes.html">Latkes</a>
+    <h1>Mom's Potato Latkes</h1>
 </body>
 </html>
