--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="recipes/latkes.html">Latkes</a>
+    <ul>
+        <li><a href="recipes/latkes.html">Latkes</a></li>
+        <li><a href="recipes/baked.html">Baked French Toas</a></li>
+        <li><a href="recipes/aperol.html">Aperol Sour</a></li>
+    </ul>
+
 </body>
 </html>
